syntax = "proto3";
package stegos.consensus;

import "crypto.proto";
import "blockchain.proto";

message MacroBlockProposal {
    stegos.blockchain.MacroBlockHeader header = 1;
    repeated stegos.blockchain.Transaction transactions = 2;
}

message Prevote {}

message Precommit {
    stegos.crypto.SecureSignature block_hash_sig = 1;
}

message ConsensusMessageBody {
    oneof body {
        Prevote prevote = 1;
        Precommit precommit= 2;
        MacroBlockProposal macro_block_proposal = 11;
    }
}

message ConsensusMessage {
    uint64 epoch = 1;
    uint32 round = 2;
    stegos.crypto.Hash block_hash = 3;
    ConsensusMessageBody body = 4;
    stegos.crypto.SecurePublicKey pkey = 5;
    stegos.crypto.SecureSignature sig = 6;
}